@@ -1,3 +1,12 @@
+2013-08-18  Antonio Ceballos  <aceballos@gmail.com>
+
+	* src/main.cc: graphic mode and pgnload enhancements.
+	* src/frontend/output.c: likewise.
+	* src/frontend/cmd.c: likewise.
+	* src/frontend/pgn.c: likewise.
+	* src/frontend/common.h: likewise.
+	* AUTHORS: likewise.
+
 2013-03-11  Antonio Ceballos  <aceballos@gmail.com>
 
 	* src/main.cc: Copyright year updated to 2013.
